:iphone: Mobile fixes, batch 1

--- a/src/sass/components/_intro.scss
+++ b/src/sass/components/_intro.scss
@@ -2,6 +2,7 @@
   @include page-block;
   padding-bottom: 40px;
 
+  background-color: $background-gray;
   border-bottom: 1px solid $border;
 
   h1 {
