--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -9,17 +9,17 @@ footer {
   }
 
   p {
-    color: $caption-gray;
+    color: $mid-gray;
     font-size: 0.8rem;
     margin-bottom: 0.5rem;
 
     a {
-      color: $caption-gray;
+      color: $mid-gray;
       text-decoration: underline;
 
       &:hover,
       &:active {
-        color: $mid-gray;
+        color: $black;
       }
     }
   }
