:sparkles: Built :house: homepage.

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -4,6 +4,7 @@
 @import "general";
 @import "layout";
 @import "components/footer";
+@import "components/home";
 @import "components/intro";
 @import "components/location";
 @import "components/navigation";
