:sparkles: Add map to homepage

--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -3,11 +3,13 @@
 
   @media #{$break-mobile-large} {
     margin-top: 300px;
+    padding-top: 20px;
   }
 
   a {
     text-decoration: none;
     margin-bottom: 20px;
+    display: block;
     &:last-child {
       margin-bottom: 0;
     }
