:sparkles: Added navigation menu link back to home

--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -85,6 +85,11 @@
           background: $accent-hover;
         }
       }
+
+      &.menu-link-homepage {
+        color: #fff;
+        background-color: #82b3ae;
+      }
     }
   }
 }
